added links to navbar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Start of Email Container ================================================== -->
         <table class="email-container" width="600px" align="center" cellspacing="0" cellpadding="0" border="0"
           style="background: #ffffff;">
-          
+
           <!-- =========================  Email Header ======================================================================================= -->
 
 
@@ -80,19 +80,22 @@
           <tr style="background-color: #ffffff; background: #ffffff; ">
             <td>
               <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
-                style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 25px 0; margin: 0; text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">
+                style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 25px 0; margin: 0;">
                 <tr>
                   <td align="left" width="33%"
                     style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
-                    women
+                    <a href="https://www.allbirds.com/collections/womens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp13Fr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">women</a>
                   </td>
                   <td align="center" width="33%"
                     style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
-                    men
+                    <a href="https://www.allbirds.com/collections/mens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp3xZr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px"> men </a>
                   </td>
                   <td align="right" width="33%"
                     style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
-                    apparel
+                    <a href="https://www.allbirds.com/pages/apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp32Zr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px"> apparel </a>
                   </td>
                 </tr>
               </table>
@@ -161,7 +164,7 @@
           <!-- Start of SHOP WOMEN BTN ................................................................ -->
           <tr style="background-color: #cf9e51; background: #cf9e51;">
             <td>
-              <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
+              <table width="100%" align="left" cellspacing="0" cellpadding="0" border="0"
                 style="padding: 0px 50px 20px 50px; margin: 0; color: #333132;">
                 <tr>
                   <td>
@@ -180,7 +183,7 @@
           <!-- Start of SHOP MEN BTN ................................................................ -->
           <tr style="background-color: #cf9e51; background: #cf9e51;">
             <td>
-              <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
+              <table width="100%" align="left" cellspacing="0" cellpadding="0" border="0"
                 style="padding: 0px 50px 50px 50px; margin: 0; color: #333132;">
                 <tr>
                   <td>
@@ -362,13 +365,15 @@
                 style="padding: 11px 0px; margin: 0;">
                 <tr>
                   <td>
-                    <a href="https://www.allbirds.com/collections/new-arrivals?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyyJr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" align="center"
+                    <a href="https://www.allbirds.com/collections/new-arrivals?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyyJr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      align="center"
                       style="display:inline-block; width: 100%;  padding: 20px 0; margin: 0; font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000; border-top: 2px solid #000000;">
                       new arrivals
                     </a>
                 <tr>
                   <td>
-                    <a href="https://www.allbirds.com/collections/womens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyR1r1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" align="center"
+                    <a href="https://www.allbirds.com/collections/womens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyR1r1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      align="center"
                       style="display:inline-block; width: 100%;  padding: 20px 0; margin: 0;  font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000;">
                       womens shoes
                     </a>
@@ -377,7 +382,8 @@
 
                 <tr>
                   <td>
-                    <a href="https://www.allbirds.com/collections/mens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyRZr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" align="center"
+                    <a href="https://www.allbirds.com/collections/mens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyRZr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      align="center"
                       style="display:inline-block; width: 100%;  padding: 20px 0; margin: 0;  font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000;">
                       mens shoes
                     </a>
@@ -386,7 +392,8 @@
 
                 <tr>
                   <td>
-                    <a href="https://www.allbirds.com/collections/womens-apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyWhr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" align="center"
+                    <a href="https://www.allbirds.com/collections/womens-apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyWhr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      align="center"
                       style="display:inline-block; width: 100%; padding: 20px 0;  margin: 0;  font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000;">
                       womens apparel
                     </a>
@@ -395,7 +402,8 @@
 
                 <tr>
                   <td>
-                    <a href="https://www.allbirds.com/collections/mens-apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyT1r1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" align="center"
+                    <a href="https://www.allbirds.com/collections/mens-apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyT1r1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      align="center"
                       style="display:inline-block; width: 100%; padding: 20px 0;  margin: 0; font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000;">
                       men apparel
                     </a>
@@ -416,8 +424,9 @@
               <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
                 style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 50px 0px 50px 0px; margin: 0; text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">
                 <tr>
-                  <td align="left" width="25%" style="padding: 0px 20px; margin: 0; width: 25%; text-align: center;">
-                    <a href="https://www.allbirds.com/pages/footprint?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUWRr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" style="text-decoration: none;">
+                  <td align="left" width="25%" style="padding: 0px ; margin: 0; padding-left: 20px; width: 25%; text-align: center;">
+                    <a href="https://www.allbirds.com/pages/footprint?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUWRr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/mZYk6M8t/allbirds-icon-globe.png" style="width: 75px">
                       <p style="color: #000000; padding: 0; margin: 0; font-size: 14px; letter-spacing: 0px;">Tread
                         Lighter On
@@ -426,8 +435,9 @@
                   </td>
                   <!-- ................................................ -->
 
-                  <td align="center" width="25%" style="padding: 0px 20px; margin: 0; width: 25%; text-align: center;">
-                    <a href="https://www.allbirds.com/pages/returns-exchanges?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUVFr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" style="text-decoration: none;">
+                  <td align="center" width="25%" style="padding: 0px; margin: 0; width: 25%; text-align: center;">
+                    <a href="https://www.allbirds.com/pages/returns-exchanges?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUVFr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/prJdhbpD/allbirds-icon-calender.png" style="width: 75px">
                       <p style="color: #000000; padding: 0; margin: 0; font-size: 14px; letter-spacing: 0px;">Try Them
                         For
@@ -438,7 +448,8 @@
                   <!-- ................................................ -->
 
                   <td align="right" width="25%" style="padding: 0px; margin: 0; width: 20%; text-align: center;">
-                    <a href="https://www.allbirds.com/pages/returns-exchanges?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUTJr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" style="text-decoration: none;">
+                    <a href="https://www.allbirds.com/pages/returns-exchanges?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUTJr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/ZKjRJmkm/allbirds-icon-shipping.png" style="width: 75px">
                       <p style="color: #000000; padding: 0; margin: 0; font-size: 14px; letter-spacing: 0px;">Free
                         Shipping &
@@ -447,8 +458,9 @@
                   </td>
                   <!-- ................................................ -->
 
-                  <td align="right" width="25%" style="padding: 0px 20px; margin: 0; width: 25%; text-align: center;">
-                    <a href="https://www.allbirds.com/pages/stores?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUXpr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact" style="text-decoration: none;">
+                  <td align="right" width="25%" style="padding: 0px; margin: 0; padding-right: 20px; width: 25%; text-align: center;">
+                    <a href="https://www.allbirds.com/pages/stores?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUXpr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/X7nqMJzx/allbirds-icon-search.png" style="width: 75px">
                       <p style="color: #000000; padding: 0; margin: 0; font-size: 14px; letter-spacing: 0px;">Find A
                         Store
@@ -494,13 +506,16 @@
                     <a href="https://www.instagram.com/allbirds/" style="text-decoration: none;">
                       <img src="https://i.postimg.cc/QdtMtzsT/allbirds-social-insta.png" style="width: 50px; ">
                     </a>
-                    <a href="https://www.pinterest.com/weareallbirds/?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141" style="text-decoration: none;">
+                    <a href="https://www.pinterest.com/weareallbirds/?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/pTNVsXjf/allbirds-social-pintrest.png" style="width: 50px;">
                     </a>
-                    <a href="https://m.facebook.com/weareallbirds?utm_source=Shopify+US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141&_rdr" style="text-decoration: none;">
+                    <a href="https://m.facebook.com/weareallbirds?utm_source=Shopify+US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141&_rdr"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/3xcxDZJb/allbirds-social-facebook.png" style="width: 50px;">
                     </a>
-                    <a href="https://twitter.com/allbirds?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141" style="text-decoration: none;">
+                    <a href="https://twitter.com/allbirds?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/CKnLCfRM/allbirds-social-twiiter.png" style="width: 50px;">
                     </a>
 
@@ -521,7 +536,8 @@
                 style="padding: 0px 0px 50px 0px; margin: 0; text-align: center;">
                 <tr>
                   <td>
-                    <a href="https://apps.apple.com/app/id1495911336?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141&%24web_only=true&_branch_match_id=977518632698987366" style="text-decoration: none;">
+                    <a href="https://apps.apple.com/app/id1495911336?utm_source=Shopify%20US&utm_medium=email&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&Iterable_campaign=3023267&Iterable_template=4142141&%24web_only=true&_branch_match_id=977518632698987366"
+                      style="text-decoration: none;">
                       <img src="https://i.postimg.cc/PxZJH8HV/allbirds-appstore.png" width="120px"
                         style="display:inline-block; width: 120px;">
                     </a>
@@ -544,7 +560,8 @@
                       Allbirds, Inc.</p>
                     <p style="letter-spacing: 0px; color: #a2a2a2; font-size: 10px; font-weight: 300;">730 Montgomery
                       St. San Francisco, CA 94111</p>
-                    <a href="https://www.allbirds.com/?irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCW1tr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_medium=affiliate&utm_source=impact" style="text-decoration: none;padding: 0;">
+                    <a href="https://www.allbirds.com/?irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCW1tr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_medium=affiliate&utm_source=impact"
+                      style="text-decoration: none;padding: 0;">
                       <p
                         style="letter-spacing: 0px; color: #9e9e9e; font-size: 10px; font-weight: 600; text-decoration: none; text-decoration: underline;">
                         Unsubscribe</p>
