fixed color issue for navbar hyper links

--- a/index.html
+++ b/index.html
@@ -82,20 +82,19 @@
               <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
                 style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 25px 0; margin: 0;">
                 <tr>
-                  <td align="left" width="33%"
-                    style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
+                  <td align="left" width="33%" style="padding: 0px; margin: 0; width: 33%; text-align: center;">
                     <a href="https://www.allbirds.com/collections/womens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp13Fr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
-                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">women</a>
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px;  color: #000000;">women</a>
                   </td>
-                  <td align="center" width="33%"
-                    style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
+                  <td align="center" width="33%" style="padding: 0px; margin: 0; width: 33%; text-align: center;">
                     <a href="https://www.allbirds.com/collections/mens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp3xZr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
-                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px"> men </a>
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px;  color: #000000;">
+                      men </a>
                   </td>
-                  <td align="right" width="33%"
-                    style="padding: 0px; margin: 0; width: 33%; text-align: center; color: #000000;">
+                  <td align="right" width="33%" style="padding: 0px; margin: 0; width: 33%; text-align: center;">
                     <a href="https://www.allbirds.com/pages/apparel?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSp32Zr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
-                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px"> apparel </a>
+                      style="text-decoration: none;  text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px ; color: #000000;">
+                      apparel </a>
                   </td>
                 </tr>
               </table>
@@ -370,6 +369,8 @@
                       style="display:inline-block; width: 100%;  padding: 20px 0; margin: 0; font-size: 14px; font-weight:600; text-align: center; text-decoration: none; text-transform: uppercase; color: #000000;  border-bottom: 2px solid #000000; border-top: 2px solid #000000;">
                       new arrivals
                     </a>
+                </tr>
+
                 <tr>
                   <td>
                     <a href="https://www.allbirds.com/collections/womens?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCyR1r1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
@@ -424,7 +425,8 @@
               <table width="100%" align="center" cellspacing="0" cellpadding="0" border="0"
                 style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 50px 0px 50px 0px; margin: 0; text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">
                 <tr>
-                  <td align="left" width="25%" style="padding: 0px ; margin: 0; padding-left: 20px; width: 25%; text-align: center;">
+                  <td align="left" width="25%"
+                    style="padding: 0px ; margin: 0; padding-left: 20px; width: 25%; text-align: center;">
                     <a href="https://www.allbirds.com/pages/footprint?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUWRr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
                       style="text-decoration: none;">
                       <img src="https://i.postimg.cc/mZYk6M8t/allbirds-icon-globe.png" style="width: 75px">
@@ -458,7 +460,8 @@
                   </td>
                   <!-- ................................................ -->
 
-                  <td align="right" width="25%" style="padding: 0px; margin: 0; padding-right: 20px; width: 25%; text-align: center;">
+                  <td align="right" width="25%"
+                    style="padding: 0px; margin: 0; padding-right: 20px; width: 25%; text-align: center;">
                     <a href="https://www.allbirds.com/pages/stores?%243p=e_iterable&irclickid=WEw2XSS7WxyLUoKzgV31tV3GUkBSCUXpr1ufWA0&irgwc=1&utm_campaign=adgoal%20GmbH&utm_campaign=%5BBC%5D_US_20211014_SWT_Trail_Runner_Launch&utm_medium=affiliate&utm_medium=email&utm_source=impact"
                       style="text-decoration: none;">
                       <img src="https://i.postimg.cc/X7nqMJzx/allbirds-icon-search.png" style="width: 75px">
@@ -499,10 +502,10 @@
                 style="background-color: #ffffff; background: #ffffff; color: #000000; padding: 50px 0px 50px 0px; margin: 0; text-transform: uppercase; font-size: 14px; font-weight: 600; letter-spacing: 1px">
 
                 <tr>
-                  <td align="left" width="25%" style="padding: 0px ; margin: 0; width: 20%; text-align: center;">
+                  <td align="left" width="20%" style="padding: 0px ; margin: 0; width: 20%; text-align: center;">
 
                   </td>
-                  <td align="center" width="25%" style="padding: 0px; margin: 0; width: 60%; text-align: center;">
+                  <td align="center" width="60%" style="padding: 0px; margin: 0; width: 60%; text-align: center;">
                     <a href="https://www.instagram.com/allbirds/" style="text-decoration: none;">
                       <img src="https://i.postimg.cc/QdtMtzsT/allbirds-social-insta.png" style="width: 50px; ">
                     </a>
@@ -520,7 +523,7 @@
                     </a>
 
                   </td>
-                  <td align="right" width="25%" style="padding: 0px; margin: 0; width: 20%; text-align: center;">
+                  <td align="right" width="20%" style="padding: 0px; margin: 0; width: 20%; text-align: center;">
 
                   </td>
                 </tr>
@@ -581,10 +584,8 @@
 
   </table>
   <!-- End of Email Container ================================================== -->
-  </td>
-  </tr>
-  </table>
-  <!-- End of HTML Email body ================================================== -->
+
 </body>
+<!-- End of HTML Email body ================================================== -->
 
 </html>
