--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-
+  <meta property="og:image" content="https://i.postimg.cc/yNf6D0V6/screenshot-allbirds-htmlemail.png">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="627" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
 
